# nari2d

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/: Cargo.toml
crates/backends/nari2d-wgpu/: Cargo.toml
crates/nari2d-animation/: Cargo.toml
crates/nari2d-anita/: Cargo.toml
crates/nari2d-anita/src/: lib.rs
crates/nari2d-anita/src/scalar/: mod.rs
crates/nari2d-file/: Cargo.toml
crates/nari2d-physics/: Cargo.toml
crates/nari2d-traits/: Cargo.toml
crates/nari2d-transform/: Cargo.toml
crates/nari2d-types/: Cargo.toml
crates/nari2d-types/src/: asset.rs  error.rs  lib.rs  resources.rs
crates/nari2d-types/src/components/: lattice.rs  light.rs  mesh.rs  mod.rs  name.rs  node_info.rs  particle_emitter.rs  physics.rs  position.rs  rotation.rs  scale.rs  skeleton.rs  sprite.rs  texture.rs  visibility.rs
crates/nari2d-types/src/traits/: mod.rs  render.rs  resource_service.rs
crates/nari2d_animation/: Cargo.toml
crates/nari2d_anita/: Cargo.toml
crates/nari2d_anita/src/: lib.rs
crates/nari2d_core/: Cargo.toml
crates/nari2d_core/src/: asset.rs  error.rs  lib.rs  mesh.rs  traits.rs
crates/nari2d_core/src/collections/: indexbimap.rs  mod.rs  point_store.rs  two_elem_move_once.rs
crates/nari2d_core/src/error/: asset.rs  mesh.rs  mod.rs  util.rs
crates/nari2d_core/src/geometry/: angle.rs  bounds.rs  half_edge.rs  lattice.rs  mesh.rs  mod.rs  orientation.rs  point2d.rs  scale2d.rs
crates/nari2d_core/src/geometry/half_edge/: index.rs  index_map.rs  mesh.rs  mod.rs  value.rs
crates/nari2d_core/src/geometry/mesh/: edit_mesh.rs  indices.rs  mod.rs  nari_mesh.rs  simple_mesh.rs
crates/nari2d_core/src/traits/: asset_service.rs  calculation_backend.rs
crates/nari2d_file/: Cargo.toml
crates/nari2d_macros/: Cargo.toml
crates/nari2d_macros/src/: lib.rs  some_or_continue.rs
crates/nari2d_mesh/: Cargo.toml
crates/nari2d_mesh/src/: lib.rs  mesh.rs  mesh_builder.rs  point.rs
crates/nari2d_mesh/src/mesh/: bounding_box.rs  connected_components.rs  connectivity.rs  connectivity_info.rs  edge_measures.rs  edit.rs  export.rs  face_measures.rs  ids.rs  intersection.rs  iterators.rs  merge.rs  orientation.rs  quality.rs  split.rs  transformations.rs  traversal.rs  validity.rs  vertex_measures.rs
crates/nari2d_physics/: Cargo.toml
crates/nari2d_traits/: Cargo.toml
crates/nari2d_traits/src/: calculation_backend.rs  index.rs  lib.rs  render.rs
docs/design-drafts/: Standard.md
docs/the-standard/: book.toml
docs/the-standard/src/: FileFormat.md  README.md  SUMMARY.md  Standard.md
docs/the-standard/src/file_formats/: FileFormat-Export.md
docs/the-standard/src/nariscript/: README.md  types.md
docs/the-standard/src/nodes/: README.md
docs/the-standard/src/nodes_components_resources/: README.md  nodes_and_internals.md  other_nodes.md  position_transform.md
src/: asset.rs  context.rs  error.rs  lib.rs
src/components/: light.rs  mesh.rs  mod.rs  particle_emitter.rs  position.rs  rotation.rs  scale.rs  skeleton.rs  texture.rs
src/traits/: calculation_backend.rs  mod.rs
