[package]
name = "nari2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
thiserror = "1.0"
dashmap = "5.3"
bevy_ecs = "0.8"
smallvec = "1.9"
petgraph = "0.6.0"
parking_lot = "0.12"
euclid = "0.22.6"
ahash = "0.8.0"

[dependencies.image]
version = "0.24"
default-features = false

[dependencies.nari2d_core]
path = "crates/nari2d_core"
