[package]
name = "nari2d-anita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["simd-aarch", "simd-arm", "simd-wasm", "simd-x86_64"]
simd-arm = []
simd-aarch = []
simd-wasm = []
simd-wgpu = ["wgpu"]
simd-x86_64 = []

[dependencies]

[dependencies.wgpu]
version = "^0.11"
optional = true