[package]
name = "nari2d-types"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.29"
bevy_ecs = "0.5.0"
smallvec = "1.6.1"
petgraph = "0.6.0"
euclid = "0.22.6"
gltf = "0.16.0"
parking_lot = "0.11.2"
dashmap = "4.0.2"

[dependencies.image]
version = "0.23.14"
default-features = false
