[package]
name = "nari2d_core"
version = "0.1.0"
edition = "2021"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "Core Type Definitions and Re-exports for Nari2D"
keywords = ["nari2d"]
license = "MPL-2.0/LGPL-3.0"
repository = "https://github.com/l1npengtul/nari2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_impl"]
serde_impl = ["serde", "serde_derive", "nalgebra/serde-serialize", "staticvec/serde"]

[dependencies]
thiserror = "^1.0"
bevy_ecs = "^0.5"
petgraph = "^0.6"
parking_lot = "^0.11"
ahash = "^0.7"
rstar = "^0.9"
cdt = "0.1.0"
nalgebra = "^0.30"
robust = "^0.2"
bimap = "^0.6"
staticvec = "^0.11"
itertools = "^0.10"
wide = "^0.7"

[dependencies.image]
version = "^0.23"
default-features = false

[dependencies.serde]
version = "^1.0"
default-features = false
features = ["rc", "serde_derive"]
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dependencies.smallvec]
version = "^1.7"
features = ["serde", "union", "const_generics", "const_new"]

[dependencies.nari2d_traits]
path = "../nari2d_traits"
