[package]
name = "nari2d_core"
version = "0.1.0"
edition = "2021"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "Core Type Definitions and Re-exports for Nari2D"
keywords = ["nari2d"]
license = "MPL-2.0/LGPL-3.0"
repository = "https://github.com/l1npengtul/nari2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_impl"]
serde_impl = ["serde", "serde_derive", "staticvec/serde", "simple-grid/serde"]

[dependencies]
thiserror = "^1.0"
bevy_ecs = "^0.6"
petgraph = "^0.6"
parking_lot = "^0.12"
ahash = "^0.7"
rstar = "^0.9"
cdt = "0.1.0" # cock and delaunay ~~torture~~ triangulation
robust = "^0.2"
bimap = "^0.6"
staticvec = "^0.11"
itertools = "^0.10"
simple-grid = "^2.1"

[dependencies.image]
version = "^0.24"
default-features = false

[dependencies.serde]
version = "^1.0"
default-features = false
features = ["serde_derive"]
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true
