[package]
name = "nari2d_core"
version = "0.1.0"
edition = "2021"
authors = ["l1npengtul <l1npengtul@protonmail.com>"]
description = "Core Type Definitions for Nari2D"
keywords = ["nari2d"]
license = "MPL-2.0/LGPL-3.0"
repository = "https://github.com/l1npengtul/nari2d"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_impl"]
serde_impl = ["serde", "serde_derive", "simple-grid/serde", "nalgebra/serde", "cgmath/serde"]
edit = ["rstar", "nanorand"]

[dependencies]
thiserror = "1.0"
bevy_ecs = "0.8"
itertools = "0.10"
simple-grid = "2.1"
slotmap = "1.0"
cgmath = "0.18"
smallvec = "1.9"
miette = "5.3"
nalgebra = "0.31"
robust = "0.2"

[dependencies.image]
version = "^0.24"
default-features = false

[dependencies.serde]
version = "^1.0"
default-features = false
features = ["serde_derive"]
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dependencies.rstar]
version = "0.9"
optional = true

[dependencies.nari2d_macros]
version = "0.1.0"
path = "../nari2d_macros"

[dependencies.nanorand]
version = "0.7"
optional = true
