[package]
name = "nari2d_mesh"
version = "0.1.0" # REMEMBER TO UPDATE VERSION IN README!!
authors = ["Asger Nyman Christiansen <asgernyman@gmail.com>", "l1npengtul <l1npengtul@protonmail.com>"]
edition = "2021"
description = "A triangle mesh data structure including basic operations. Forked from tri-mesh for 2D."
license = "MIT"
readme = "README.md"
categories = ["data-structures", "algorithms"]
keywords = ["mesh", "geometry", "2d", "half-edge", "graphics"]

[features]
default = []
serialize = ["serde", "serde_derive"]

[dependencies]
num-traits = "^0.2"

[dependencies.serde]
version = "^1.0"
features = ["derive"]
optional = true

[dependencies.serde_derive]
version = "^1.0"
optional = true

[dev-dependencies]
three-d = "0.1.0"
